--- a/harita-dashboard/index.html
+++ b/harita-dashboard/index.html
@@ -9,6 +9,7 @@
 </head>
 <body class="h-screen m-0">
   <div id="root" class="h-full"></div>
+  <script src="./chart.umd.js"></script>
   <script type="module" src="./app.js"></script>
 </body>
 </html>
